--- a/style.css
+++ b/style.css
@@ -8,13 +8,11 @@
     padding-right: 15px;
     margin-left: auto;
     margin-right: auto;
-  }
-
+}
 nav{
     display: flex;
     justify-content: space-around;
     background-color:#07141D;
-
 }
 nav .logo {
     padding: 1.8%;
@@ -22,7 +20,7 @@ nav .logo {
 nav .logo a {
     color: #ffffff;
 }
-nav .logo i:hover {
+nav .logo a:hover {
     color:teal;
 }
 nav .links ul{
@@ -39,7 +37,6 @@ nav .links li a {
 }
 nav .links li a:hover {
     color:teal;
-    transform: scale(1.2);
 }
 nav .links li a li{
     padding: 3%;
@@ -84,6 +81,11 @@ a{
     text-align: center;
 
 }
+.fst h3:hover{
+  cursor: pointer;
+   color:teal;
+}
+
 .sec2{
     width: 100%;
     margin-top: 3%;
@@ -92,6 +94,10 @@ a{
 .sec2 .content{
     display: flex;
     justify-content: space-around;
+}
+.content h4:hover{
+  cursor: pointer;
+   color:teal;
 }
 .sec2 .content1{
     width: 100%;
@@ -110,7 +116,9 @@ a{
 .sec2  a:hover{
     color: teal;
 }
+
 /* Section3 */
+
 .sec3{
     display: flex;
     width: 100%;
@@ -119,13 +127,15 @@ a{
     margin-bottom: 2%;
     
 }
+.sec3 h2:hover{
+    cursor: pointer;
+     color:teal;
+}
 .sec3 .sec3cont1{
     display: flex;
     width: 49%;
-    background-color: gainsboro;
-    
+    background-color: gainsboro;   
 }
-
 .sec3 .sec3cont1 img{
     width: 100%;
     height: 100%;   
@@ -139,9 +149,15 @@ a{
     width: 80%;
     margin: auto;
 }
+
 /* section 4 */
+
 .competions .lol{
    padding: 5%;
+}
+.competions h2:hover{
+  cursor: pointer;
+  color:teal;
 }
 .competions .hvr-srv::after {
     content: "";
@@ -172,13 +188,20 @@ a{
   .competions .row .col-md-4:hover .container-fluid i {
     color: white;
   }
+
   /* Details */
+
   .details h1 , h3{
     text-align: center;
     padding: 1%;
   }
   .details h3{
     color: #000;
+    margin-bottom: 5%;
+    margin-top: 2%;
+  }
+  .details h5{
+    margin-bottom: 4%;
   }
   .container .content1{
     width: 40%;
@@ -187,8 +210,21 @@ a{
     display: flex;
     justify-content: space-around;
   }
+  .details h1:hover{
+    cursor: pointer;
+     color:teal;
+  }
+  .details h3:hover{
+    cursor: pointer;
+     color:teal;
+  }
+  .details h5:hover{
+    cursor: pointer;
+     color:teal;
+  }
   
   /* statistics */
+
   .statistics{
     text-align: center;
     background-color: #F8F9FA;
@@ -200,6 +236,14 @@ a{
   }
   .statistics h4{
     margin-top:10%;
+  }
+  .statistics h1:hover{
+    cursor: pointer;
+    color:teal;
+  }
+  .statistics i:hover{
+    cursor: pointer;
+    color:teal;
   }
   @media screen and (max-width: 1200px){
     .container .content1{
@@ -219,7 +263,9 @@ a{
         margin-top:3%;
       }
   }
+
 /* Squads*/
+
 .fst h3 {
     color: #000;
 }
@@ -255,7 +301,9 @@ a{
     margin: auto;  
     height: 100%;   
 }
+
 /* Conact Us */
+
 .labelss{
     margin-left: 14%;
 }
@@ -298,6 +346,10 @@ a{
     text-transform: uppercase;
     border-radius: 15px;
   }
+  .section-title a:hover{
+    cursor: pointer;
+     color:teal;
+  }
   .contact-area .btn:hover {
     background-color: black
     ;
@@ -337,9 +389,9 @@ a{
     transform: scale(1.2);
   }
   @media screen and (max-width: 1100px){
-    .links{
+    /* .links  {
         opacity: 0;
-    }
+    } */
    
  
 .sec3{
@@ -349,7 +401,6 @@ a{
     }
 .sec3 .sec3cont1{
      width: 100%;
-     /* height: 50%; */
      margin-top: 1%;
      
     }
@@ -362,7 +413,6 @@ a{
     }
     .container1 .pics {
         display: block;
-        /* width: 100%; */
     }
     .container1 .pics img {
         width: 100%;
@@ -386,16 +436,12 @@ a{
     }
     .frm .cnt2 input{
         width: 100%;
-        /* margin: auto; */
         margin: 1%;
     
     }
   }
 
  @media screen and (max-width: 600px){
-    .logo{
-        opacity: 0;
-    }
     nav{
     background-color: #f5f5f5;  
     height: 0;
@@ -403,9 +449,6 @@ a{
    .s1{
     height: 70vh;
 }
-/* .s1 h1 {
-    font-size: 100%;
-} */
 .s1 button{
      --bs-btn-padding-y: .25rem;
      --bs-btn-padding-x: .45rem;
