--- a/style.css
+++ b/style.css
@@ -389,11 +389,7 @@ a{
     transform: scale(1.2);
   }
   @media screen and (max-width: 1100px){
-    /* .links  {
-        opacity: 0;
-    } */
    
- 
 .sec3{
     display: block;
     height: 30%;
@@ -432,16 +428,16 @@ a{
         width: 100%;
         
         margin-left: 0%; 
-    
     }
     .frm .cnt2 input{
         width: 100%;
         margin: 1%;
-    
     }
   }
-
  @media screen and (max-width: 600px){
+  .links  .a {
+    opacity: 0;
+}
     nav{
     background-color: #f5f5f5;  
     height: 0;
