--- a/style.css
+++ b/style.css
@@ -436,7 +436,8 @@ a{
   }
  @media screen and (max-width: 600px){
   .links   {
-    opacity: 0;
+    /* opacity: 0; */
+    font-size: x-small;
 }
     nav{
     background-color: #f5f5f5;  
@@ -449,6 +450,13 @@ a{
      --bs-btn-padding-y: .25rem;
      --bs-btn-padding-x: .45rem;
      --bs-btn-font-size: .65rem;
+}
+.sec3 .sec3cont1 img{
+  
+  height: 80%;
+}
+.sec3 .sec3cont1 .sec3txt{
+  font-size: smaller;
 }
   } 
 
