--- a/style.css
+++ b/style.css
@@ -10,12 +10,16 @@
     margin-right: auto;
 }
 nav{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
     display: flex;
     justify-content: space-around;
     background-color:#07141D;
 }
 nav .logo {
-    padding: 1.8%;
+    padding-top: 0.8%;
 }
 nav .logo a {
     color: #ffffff;
@@ -31,16 +35,15 @@ nav .links ul{
 }
 .links{
     text-align: center;
-padding-top: 1%;}
+/* padding-top: 1%; */
+}
 nav .links li a {
     color: #ffffff;
 }
 nav .links li a:hover {
     color:teal;
 }
-nav .links li a li{
-    padding: 3%;
-}
+
 a{
     text-decoration: none;
     color: #000;
@@ -57,7 +60,7 @@ a{
 }
 .s1{
     background: linear-gradient(rgba(0,0,0,0.4)0% 100%),url(pics/BG_Tablet-Web-1080p.jpg);
-    height: 95vh;
+    height: 110vh;
     background-attachment: fixed;
     background-position: center;
     background-size: cover;
@@ -436,13 +439,10 @@ a{
   }
  @media screen and (max-width: 600px){
   .links   {
-    /* opacity: 0; */
+   
     font-size: x-small;
+    
 }
-    nav{
-    background-color: #f5f5f5;  
-    height: 0;
-   }
    .s1{
     height: 70vh;
 }
