--- a/style.css
+++ b/style.css
@@ -232,14 +232,14 @@ a{
     cursor: pointer;
      color:teal;
   }
-  @media screen and (max-width: 1200px){
+  @media screen and (max-width: 600px){
     .details{
-      padding-top: 9%;
-      padding-bottom: 4%;
+      padding-top: 12%;
+      padding-bottom: 7%;
     }
     .competions{
-      padding-top: 8%;
-      padding-bottom: 4%;
+      padding-top: 12%;
+      padding-bottom: 7%;
     }
   }
   /* statistics */
@@ -459,7 +459,7 @@ a{
  @media screen and (max-width: 600px){
   .links   {
    
-    font-size: x-small;
+    font-size: xx-small;
     
 }
    .s1{
@@ -478,8 +478,8 @@ a{
   font-size: smaller;
 }
 .squads{
-  padding-top: 10%;
-  padding-bottom: 5%;
+  padding-top: 13%;
+  padding-bottom: 6%;
 }
   } 
 
