--- a/style.css
+++ b/style.css
@@ -236,6 +236,7 @@ a{
     .details{
       padding-top: 12%;
       padding-bottom: 7%;
+      font-size: small;
     }
     .competions{
       padding-top: 12%;
